--- a/EdytorWielokatow/EdytorWielokatow.csproj
+++ b/EdytorWielokatow/EdytorWielokatow.csproj
@@ -28,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\Bezier.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\FixedLength.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
