added to vertex Draw added bezierVertex

--- a/EdytorWielokatow/EdytorWielokatow.csproj
+++ b/EdytorWielokatow/EdytorWielokatow.csproj
@@ -31,7 +31,16 @@
     <None Update="Resources\Bezier.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\C0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\C1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\FixedLength.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\G0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Horizontal.png">
